# spektrafilm-ofx

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_macos.sh  install_instructions.txt
Legal/: SPEKTRAFILM_OFX_LICENSE.txt  SPEKTRAFILM_OFX_LUT_LICENSE.txt  SPEKTRA_OFX_LICENSE.txt  SPEKTRA_OFX_LUT_LICENSE.txt  THIRD_PARTY_NOTICES.txt
Resources/: Info.plist.in  plugin_manifest.json  plugin_manifest.json.in
archive/: SpektraProfileStore.cpp  SpektraProfileStore.h  compile_ofx_data.py
shaders/: SpektraFilm.metal
src/: SpektraFilmPlugin.cpp  SpektraMetalRenderer.h  SpektraMetalRenderer.mm  SpektraParameters.h  SpektraProfileCurves.h  SpektraRenderer.h  SpektraTooltips.h
tools/: SpektraMetalEvaluationHarness.mm  SpektraMetalPerfHarness.mm  SpektraVariantGenerator.mm  export_reference_cases.py  generate_profile_curves.py  ofx_stock_lists.py
